Fix logo on Safari, update event information

--- a/assets/scss/cayman.scss
+++ b/assets/scss/cayman.scss
@@ -162,9 +162,8 @@ a {
 
   .project-logo {
     background: radial-gradient(closest-side, $header-bg-color 0%, transparent 80%);
-    width: 20vw;
-    min-width: 300px;
-    height: auto;
+    width: 40%;
+    height: 40%;
   }
 }
 
